Refactor codebase, improve readability, cleanup unused code, and update build configuration.